# brightness_x220_agan2k

./: .gitignore  Makefile.am  README.org  agan.conf  brightness_agan2k.1  configure.ac
src/: main.c
